fix overflow value.

--- a/src/App.css
+++ b/src/App.css
@@ -100,6 +100,8 @@ third txt color: 7F8487
 .App {
     width: 100%;
     height: var(--visual-height);
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 
