--- a/src/components/main/home/home.css
+++ b/src/components/main/home/home.css
@@ -25,7 +25,7 @@
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
     border: 1px solid rgba(255, 255, 255, 0.3);
-    height: 120px;
+    height: 140px;
     width: 100%;
     max-width: 290px;
     align-self: center;
